--- a/vignettes/MagellanNTK.Rmd
+++ b/vignettes/MagellanNTK.Rmd
@@ -480,7 +480,7 @@ that any process have at least one real step.
 
 ::: bordered
 ```{r 'demopipeline1', results='markup', fig.cap="UI process2", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
-knitr::include_graphics("./figs/demo_pipeline_1png", error = FALSE)
+knitr::include_graphics("./figs/demo_pipeline_1.png", error = FALSE)
 ```
 :::
 
