--- a/vignettes/MagellanNTK.Rmd
+++ b/vignettes/MagellanNTK.Rmd
@@ -425,7 +425,7 @@ step). It is time to save th result of the workflow by clicking on the
 new dataset to the list of datasets passed as input to the workflow.
 
 ::: bordered
-```{r 'demo4', results='markup', fig.cap="UI process", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
+```{r demo4, results='markup', fig.cap="UI process", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
 knitr::include_graphics("./figs/demo_4.png", error = FALSE)
 ```
 :::
