--- a/inst/app/Rmd_sources/descriptiveStats_Rmd.Rmd
+++ b/inst/app/Rmd_sources/descriptiveStats_Rmd.Rmd
@@ -6,7 +6,7 @@
 library(knitr)
 library(kableExtra)
 kable(as.data.frame(rv$text.log),format = "html", escape = FALSE)%>% row_spec(0,bold=TRUE,background = '#fff8ff') %>% 
-kable_styling(bootstrap_options = c( "bordered","striped"), full_width = F)
+kable_styling(bootstrap_options = c( "bordered","striped"), full_width = FALSE)
 detach("package:kableExtra", unload=TRUE)
 ```
 
